
Version 3.7.1

  - Fixed problem when using placeholders and escaped question marks, the recopied string 
    was not terminated correctly.
    [Greg Sabino Mullane]
    (Github issue #33)

  - Declare VERSION as our in seldom-used Bundle module
    (CPAN ticket #123218)



Version 3.7.0  Released September 24, 2017 (git tag 3.7.0)

  - If no placeholders, use PQexec instead of PQexecParams
    [Greg Sabino Mullane]

  - Fix running tests with non-UTF8 server_encoding
    [Dagfinn Ilmari Mannsåker]
    (Github issue #26)

  - Fix crash with missing client_encoding
    [David Christensen, reported by Marko Tiikkaja]
    (Github issue #29)

  - Fix crash with missing server_version
    [David Christensen]

  - Fix leak in ->state methods
    [Dagfinn Ilmari Mannsåker]
    (Github issue #30)

  - Add $sth->{pg_async_status} to determine async status of a statement handle.
    Values can be 0 (no async), 1 (async), or -1 (cancelled)
    [Greg Sabino Mullane, as requested by Dmytro Zagashev (ZDM)]
    (CPAN ticket #116172)


Version 3.6.2  Released May 23, 2017 (git tag 3.6.2)

  - Remove errant debugging aid from test suite



Version 3.6.1  Released May 22, 2017 (git tag 3.6.1)

  - Various fixes to support testing against Postgres 10beta
    [David Christensen]


Version 3.6.0  Released April 17, 2017 (git tag 3.6.0)

  - Make sure we do not inadvertently modify the string passed to prepare() when 
    doing the new backslash escape manipulation.
    [Greg Sabino Mullane]
    (CPAN ticket #114000)

  - Fix bug where $DBD::Pg::DBDPG_DEFAULT not picked up as a magic 
    string first time it is used in a script.
    [Greg Sabino Mullane]
    (CPAN ticket #112309)

  - Fix UTF8 flag handling in pg_(get|put)copydata
    [Dagfinn Ilmari Mannsåker]

  - Fix UTF8 double-encoding with pg_enable_utf8 = 0
    [Serge Pushkin]
    (CPAN ticket #103137)

  - Fix bug in quote_name which would fail to quote in some circumstances
    (Github Issue #22)
